<resources>
    <string name="app_name">EmployeeLoginApplication</string>
    <string name="screenName">Login</string>
    <string name="userName">Username*</string>
    <string name="password">Password*</string>
    <string name="signIn">Sign In</string>
    <string name="resetPassword">Reset Password</string>
    <string name="newPassword">New Password*</string>
    <string name="confirmPassword">Confirm Password*</string>
    <string name="submit">Submit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="employeeList">Employee List</string>
    <string name="employeeDetails">Employee Details</string>
    <string name="empName">Name</string>
    <string name="empDesg">Designation</string>
    <string name="empAge">Age</string>
</resources>
